[gd_scene load_steps=12 format=2]

[ext_resource path="res://GeneralGUIRelated/AlmanacGUI/Assets/Shared/Almanac_BrownBackground_ForDescriptions_3x3.png" type="Texture" id=1]
[ext_resource path="res://GeneralGUIRelated/AlmanacGUI/Assets/Shared/Almanac_DarkGrayBorder_ForDescriptions_4x4.png" type="Texture" id=2]
[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://GeneralGUIRelated/AlmanacGUI/Subs/Almanac_XTypeInfoPanel/TidbitSpecific/Almanac_TidbitTypeInfo_PageDisplayer/Almanac_TidbitTypeInfo_PageDisplayerPanel.gd" type="Script" id=4]
[ext_resource path="res://GameHUDRelated/RightSidePanel/TowerInformationPanel/InfoPanelComponents/TargetingPanel/Targeting_Button_Left.png" type="Texture" id=5]
[ext_resource path="res://GameHUDRelated/RightSidePanel/TowerInformationPanel/InfoPanelComponents/TargetingPanel/Targeting_Button_Highlighted.png" type="Texture" id=6]
[ext_resource path="res://GameHUDRelated/RightSidePanel/TowerInformationPanel/InfoPanelComponents/TargetingPanel/Targeting_Button.png" type="Texture" id=7]
[ext_resource path="res://GameHUDRelated/RightSidePanel/TowerInformationPanel/InfoPanelComponents/TargetingPanel/Targeting_Button_Left_Disabled.png" type="Texture" id=8]
[ext_resource path="res://GameHUDRelated/RightSidePanel/TowerInformationPanel/InfoPanelComponents/TargetingPanel/Targeting_Button_Disabled.png" type="Texture" id=9]
[ext_resource path="res://GameHUDRelated/RightSidePanel/TowerInformationPanel/InfoPanelComponents/TargetingPanel/Targeting_Button_Left_Highlighted.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
outline_color = Color( 0.866667, 0.866667, 0.866667, 1 )
font_data = ExtResource( 3 )

[node name="Almanac_TidbitTypeInfo_PageDisplayerPanel" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 123.0
margin_bottom = 40.0

[node name="PrevPageButton" type="TextureButton" parent="HBoxContainer"]
margin_top = 13.0
margin_right = 11.0
margin_bottom = 26.0
size_flags_vertical = 6
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 10 )
texture_disabled = ExtResource( 8 )

[node name="ContentPanel" type="MarginContainer" parent="HBoxContainer"]
margin_left = 15.0
margin_right = 108.0
margin_bottom = 40.0

[node name="Background" type="TextureRect" parent="HBoxContainer/ContentPanel"]
margin_right = 93.0
margin_bottom = 40.0
mouse_filter = 2
texture = ExtResource( 1 )
stretch_mode = 2

[node name="LeftBorder" type="TextureRect" parent="HBoxContainer/ContentPanel"]
margin_right = 4.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_horizontal = 2
texture = ExtResource( 2 )
stretch_mode = 2

[node name="RightBorder" type="TextureRect" parent="HBoxContainer/ContentPanel"]
margin_left = 89.0
margin_right = 93.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_horizontal = 10
texture = ExtResource( 2 )
stretch_mode = 2

[node name="TopBorder" type="TextureRect" parent="HBoxContainer/ContentPanel"]
margin_right = 93.0
margin_bottom = 4.0
mouse_filter = 2
size_flags_vertical = 2
texture = ExtResource( 2 )
stretch_mode = 2

[node name="BottomBorder" type="TextureRect" parent="HBoxContainer/ContentPanel"]
margin_top = 36.0
margin_right = 93.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_vertical = 10
texture = ExtResource( 2 )
stretch_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/ContentPanel"]
margin_right = 93.0
margin_bottom = 40.0
custom_constants/margin_right = 6
custom_constants/margin_top = 6
custom_constants/margin_left = 6
custom_constants/margin_bottom = 6

[node name="PageLabel" type="Label" parent="HBoxContainer/ContentPanel/MarginContainer"]
margin_left = 6.0
margin_top = 11.0
margin_right = 87.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 1 )
text = "Page: 1/1"
align = 1
valign = 1

[node name="NextPageButton" type="TextureButton" parent="HBoxContainer"]
margin_left = 112.0
margin_top = 13.0
margin_right = 123.0
margin_bottom = 26.0
size_flags_vertical = 6
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 6 )
texture_disabled = ExtResource( 9 )

[connection signal="pressed" from="HBoxContainer/PrevPageButton" to="." method="_on_PrevPageButton_pressed"]
[connection signal="pressed" from="HBoxContainer/NextPageButton" to="." method="_on_NextPageButton_pressed"]
